--- a/package.json
+++ b/package.json
@@ -10,6 +10,17 @@
     },
 
     "dependencies": {
-    	"nconf": "^0.8.4"
+    	"nconf": "^0.8.4", # also config if that feels nicer
+      "vue": "^2.4.2",
+      "express": "^2.4.2", # LOOKUP VERSION
+      "pm": "^2.4.2", # LOOKUP VERSION clustering
+      "request": "^2.4.2", # LOOKUP VERSION for http calls
+      "passport": "^2.4.2", # LOOKUP VERSION for auth (also passport-express)
+      "vue-resource": "^1.3.4",
+      "bootstrap": "^3.3.7"
     }
 }
+# PROMISES FOR ASYNC stuff
+# prettier for static analysis
+# eslint as well
+# airbnb + formitable
